float navbar completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
-<float-navbar></float-navbar>
-<app-main>
-</app-main>
+<div class="container">
+    <float-navbar></float-navbar>
+
+    <section id="section-intro">
+        <page-intro></page-intro>
+    </section>
+
+    <section id="section-skills">
+        <page-skills></page-skills>
+    </section>
+
+    <section id="section-projects">
+        <page-projects></page-projects>
+    </section>
+
+    <section id="section-contact">
+        <page-contact></page-contact>
+    </section>
+</div>
