--- a/src/app/float-navbar/float-navbar.component.scss
+++ b/src/app/float-navbar/float-navbar.component.scss
@@ -7,13 +7,15 @@
     position: fixed;
     width: 100%;
     bottom: 0;
-    transition: bottom 1s ease-in-out;
+    transition: transform 0.8s cubic-bezier(0.61, 0.07, 0.16, 0.81);
 }
 
 .float-container.scrolled {
-    // transform: translateY(-100%);
-    top: 0;
-    transition: top 1s ease-in-out;
+    transform: translateY(calc(-100vh + 100%));
+    // top: 0;
+    // transform: translateY(-500%);
+    // top: 0;
+    transition: transform 0.8s cubic-bezier(0.61, 0.07, 0.16, 0.81);
 }
 
 
@@ -22,12 +24,24 @@
     margin: 0px auto;
     width: 750px;
     border-radius: 50px;
-    background: linear-gradient(to bottom right, rgb(56, 56, 56), rgb(46, 46, 46));
+    box-shadow:
+        0px 4px 15px rgba(0, 0, 0, 0.1),
+        0px 0px 8px 0px rgba(0, 0, 0, 0.05),
+        inset 0px 12px 20px -10px rgba(131, 131, 131, 0.5);
+    color: #999999;
+    background: linear-gradient(to bottom right, rgba(56, 56, 56, 0.5), rgba(46, 46, 46, 0.5));
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    transition: box-shadow 0.8s;
+}
+
+.navbar.bottom {
     box-shadow:
         0px -3px 15px rgba(0, 0, 0, 0.1),
         0px 0px 8px 0px rgba(0, 0, 0, 0.05),
         inset 0px -12px 20px -10px rgba(131, 131, 131, 0.5);
-    color: #999999;
+    transition: box-shadow 0.8s;
 }
 
 ul {
@@ -49,9 +63,18 @@ li>a {
     padding: 1rem 3rem;
     color: inherit;
     transition: 0.6s;
+    cursor: pointer;
 }
 
 li>a:hover {
     transition: 0.3s;
     color: #ffffff;
+    text-shadow: 0 0 3px #3497da, 0 0 6px #3497da, 0 0 9px #3497da;
+
+}
+
+li>a.active {
+    transition: 0.3s;
+    color: #ffffff;
+    text-shadow: 0 0 3px #3497da, 0 0 6px #3497da, 0 0 9px #3497da;
 }
