--- a/src/app/page-contact/page-contact.component.scss
+++ b/src/app/page-contact/page-contact.component.scss
@@ -1,4 +1,7 @@
-p {
-    display: block;
-    height: 100vh;
+.main{
+    height: 850px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
 }
