--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
 .container{
-    background:linear-gradient(to bottom right,#060606,#1f1f1f);
+    // background:linear-gradient(to bottom right,#060606,#0c2b3e);
+    background:linear-gradient(135deg, #060606 30%, #0c2b3e 100%);
 }
