--- a/src/app/float-navbar/float-navbar.component.scss
+++ b/src/app/float-navbar/float-navbar.component.scss
@@ -12,13 +12,8 @@
 
 .float-container.scrolled {
     transform: translateY(calc(-100vh + 100%));
-    // top: 0;
-    // transform: translateY(-500%);
-    // top: 0;
     transition: transform 0.8s cubic-bezier(0.61, 0.07, 0.16, 0.81);
 }
-
-
 
 .navbar {
     margin: 0px auto;
@@ -28,10 +23,10 @@
         0px 4px 15px rgba(0, 0, 0, 0.1),
         0px 0px 8px 0px rgba(0, 0, 0, 0.05),
         inset 0px 12px 20px -10px rgba(131, 131, 131, 0.5);
-    color: #999999;
-    background: linear-gradient(to bottom right, rgba(56, 56, 56, 0.5), rgba(46, 46, 46, 0.5));
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
+    color: #a0a0a0;
+    background: linear-gradient(to bottom right, rgba(24, 24, 24, 0.4), rgba(32, 32, 32, 0.4));
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
     border: 1px solid rgba(255, 255, 255, 0.25);
     transition: box-shadow 0.8s;
 }
