--- a/src/app/page-intro/page-intro.component.html
+++ b/src/app/page-intro/page-intro.component.html
@@ -1,6 +1,6 @@
 
 <div class="main">
     <logo-banner></logo-banner>
-    <p>page-intro works!</p>
-    <h1>This is Intro</h1>
+    <h3>This is Intro</h3>
+    <h1>Hello World</h1>
 </div>
