--- a/src/app/page-projects/page-projects.component.html
+++ b/src/app/page-projects/page-projects.component.html
@@ -1,4 +1,4 @@
 <div class="main">
-    <p>page-intro works!</p>
-    <h1>This is Intro</h1>
+    <p>page-project works!</p>
+    <h1>This is Projects</h1>
 </div>
