--- a/src/app/page-skills/page-skills.component.html
+++ b/src/app/page-skills/page-skills.component.html
@@ -1,5 +1,5 @@
 
 <div class="main">
-    <p>page-intro works!</p>
-    <h1>This is Intro</h1>
+    <p>page-skill works!</p>
+    <h1>This is Skills</h1>
 </div>
