--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
 .container{
-    // background:linear-gradient(to bottom right,#060606,#0c2b3e);
-    background:linear-gradient(135deg, #060606 30%, #0c2b3e 100%);
+    // background:linear-gradient(135deg, #060606 30%, #0c2b3e 100%);
+    background:linear-gradient(135deg, #00090e , #072230 );
 }
