--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -1,4 +1,4 @@
 <div class="main">
-    <p>page-intro works!</p>
-    <h1>This is Intro</h1>
+    <p>page-contact works!</p>
+    <h1>This is Contact</h1>
 </div>
