--- a/src/app/page-intro/page-intro.component.scss
+++ b/src/app/page-intro/page-intro.component.scss
@@ -1,7 +1,12 @@
 .main{
     height: 850px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #FFF;
+}
+h1{
+    padding: 1rem;
+    font-size: 10rem;
 }
