--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
-<div class="container">
+<logo-banner></logo-banner>
     <float-navbar></float-navbar>
-
+<div class="container">
+    <div class="sections">
     <section id="section-intro">
         <page-intro></page-intro>
+    </section>
+
+    <section id="section-about">
+        <page-about></page-about>
     </section>
 
     <section id="section-skills">
@@ -16,4 +21,5 @@
     <section id="section-contact">
         <page-contact></page-contact>
     </section>
+</div>
 </div>
