--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,12 @@
 .container{
     // background:linear-gradient(135deg, #060606 30%, #0c2b3e 100%);
     background:linear-gradient(135deg, #00090e , #072230 );
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sections{
+    width: 70%;
+    
 }
