--- a/src/app/float-navbar/float-navbar.component.html
+++ b/src/app/float-navbar/float-navbar.component.html
@@ -4,7 +4,8 @@
             <!-- <li *ngFor="let section of sections">
                 <a id="_{{section.id}}" (click)="scrollTo(section.id)">{{ section.name }}</a>
             </li> -->
-            <li><a id="section-intro-" (click)="scrollTo('section-intro')">About</a></li>
+            <li><a id="section-intro-" (click)="scrollTo('section-intro')">Hello</a></li>
+            <li><a id="section-about-" (click)="scrollTo('section-about')">About</a></li>
             <li><a id="section-skills-" (click)="scrollTo('section-skills')">Skills</a></li>
             <li><a id="section-projects-" (click)="scrollTo('section-projects')">Projects</a></li>
             <li><a id="section-contact-" (click)="scrollTo('section-contact')">Contact</a></li>
