--- a/src/app/float-navbar/float-navbar.component.scss
+++ b/src/app/float-navbar/float-navbar.component.scss
@@ -24,7 +24,8 @@
         0px 0px 8px 0px rgba(0, 0, 0, 0.05),
         inset 0px 12px 20px -10px rgba(131, 131, 131, 0.5);
     color: #a0a0a0;
-    background: linear-gradient(to bottom right, rgba(24, 24, 24, 0.4), rgba(32, 32, 32, 0.4));
+    background:linear-gradient(to bottom right, rgba(0, 9, 14, 0.4) , rgba(7, 34, 48, 0.4) );
+    // background: linear-gradient(to bottom right, rgba(24, 24, 24, 0.4), rgba(32, 32, 32, 0.4));
     -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
     border: 1px solid rgba(255, 255, 255, 0.25);
