--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,36 @@
+<logo-banner></logo-banner>
+<float-navbar></float-navbar>
 <div class="container">
-    <float-navbar></float-navbar>
+    <svg class="svg-top" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#00ADB5" fill-opacity="1"
+            d="M0,0L60,32C120,64,240,128,360,133.3C480,139,600,85,720,53.3C840,21,960,11,1080,42.7C1200,75,1320,149,1380,186.7L1440,224L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+        </path>
+    </svg>
+    <div class="sections">
+        <section id="section-intro">
+            <page-intro></page-intro>
+        </section>
 
-    <section id="section-intro">
-        <page-intro></page-intro>
-    </section>
+        <section id="section-about">
+            <page-about></page-about>
+        </section>
 
-    <section id="section-skills">
-        <page-skills></page-skills>
-    </section>
+        <section id="section-skills">
+            <page-skills></page-skills>
+        </section>
 
-    <section id="section-projects">
-        <page-projects></page-projects>
-    </section>
+        <section id="section-projects">
+            <page-projects></page-projects>
+        </section>
 
-    <section id="section-contact">
-        <page-contact></page-contact>
-    </section>
+        <section id="section-contact">
+            <page-contact></page-contact>
+        </section>
+
+    </div>
+    <svg class="svg-bottom" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#00ADB5" fill-opacity="1"
+            d="M0,256L48,261.3C96,267,192,277,288,250.7C384,224,480,160,576,133.3C672,107,768,117,864,117.3C960,117,1056,107,1152,85.3C1248,64,1344,32,1392,16L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+    </svg>
 </div>
