--- a/src/app/page-intro/page-intro.component.html
+++ b/src/app/page-intro/page-intro.component.html
@@ -1,6 +1,16 @@
-
 <div class="main">
-    <logo-banner></logo-banner>
-    <h3>This is Intro</h3>
-    <h1>Hello World</h1>
+    <div class="intro">
+        <div class="hello">
+            <h3>Hello world</h3>
+        </div>
+        <div class="iam">
+            <h3>I am</h3>
+        </div>
+        <div class="name">
+            <h1>Sandip Gupta</h1>
+        </div>
+        <div class="role">
+            <h3>Web / Software Developer</h3>
+        </div>
+    </div>
 </div>
