--- a/src/app/download-csv/download-csv.component.html
+++ b/src/app/download-csv/download-csv.component.html
@@ -1,1 +1,1 @@
-<button id="downloadButton" (click)="convert()">Download CSV</button>
+<button id="downloadButton" style="padding: 2rem;" (click)="convert()">Download CSV</button>
