--- a/src/app/page-skills/page-skills.component.html
+++ b/src/app/page-skills/page-skills.component.html
@@ -1,5 +1,71 @@
-
 <div class="main">
-    <p>page-skill works!</p>
-    <h1>This is Skills</h1>
+    <h1>SKILLS</h1>
+    <div class="skill-container">
+        <div class="languages">
+            <div class="icon">
+                <h1 name="icon1">X</h1>
+                <label for="icon1"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon2">X</h1>
+                <label for="icon2"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon3">X</h1>
+                <label for="icon3"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon4">X</h1>
+                <label for="icon4"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon5">X</h1>
+                <label for="icon5"></label>
+            </div>
+        </div>
+        <div class="frameworks">
+            <div class="icon">
+                <h1 name="icon1">X</h1>
+                <label for="icon1"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon2">X</h1>
+                <label for="icon2"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon3">X</h1>
+                <label for="icon3"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon4">X</h1>
+                <label for="icon4"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon5">X</h1>
+                <label for="icon5"></label>
+            </div>
+        </div>
+        <div class="tools">
+            <div class="icon">
+                <h1 name="icon1">X</h1>
+                <label for="icon1"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon2">X</h1>
+                <label for="icon2"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon3">X</h1>
+                <label for="icon3"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon4">X</h1>
+                <label for="icon4"></label>
+            </div>
+            <div class="icon">
+                <h1 name="icon5">X</h1>
+                <label for="icon5"></label>
+            </div>
+        </div>
+    </div>
 </div>
