fixed skill icon strech

--- a/src/app/page-skills/page-skills.component.html
+++ b/src/app/page-skills/page-skills.component.html
@@ -1,88 +1,97 @@
 <div class="main">
-    <h1>SKILLS</h1>
+    <h1 id="skill">SKILLS</h1>
     <div class="skill-container">
         <div class="languages">
-            <div class="icon">
-                <img src="assets/png-icons/java.png" name="java" alt="Java">
-                <label for="java">Java</label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/python.png" name="python" alt="PY">
-                <label for="python">Python</label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/js.png" name="js" alt="JS">
-                <label for="js">Javascript</label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/typescript.png" name="ts" alt="TS">
-                <label for="ts">Typescript</label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/c-.png" name="c" alt="C++">
-                <label for="c">C/C++</label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/html-5.png" name="html" alt="HTML">
-                <label for="html">HTML</label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/css-3.png" name="CSS" alt="CSS">
-                <label for="CSS">CSS</label>
+            <div class="heading">Languages</div>
+            <div class="icons">
+                <div class="icon">
+                    <img src="assets/png-icons/java.png" name="java" alt="Java">
+                    <label for="java">Java</label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/python.png" name="python" alt="PY">
+                    <label for="python">Python</label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/js.png" name="js" alt="JS">
+                    <label for="js">Javascript</label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/typescript.png" name="ts" alt="TS">
+                    <label for="ts">Typescript</label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/c-.png" name="c" alt="C++">
+                    <label for="c">C/C++</label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/html-5.png" name="html" alt="HTML">
+                    <label for="html">HTML</label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/css-3.png" name="CSS" alt="CSS">
+                    <label for="CSS">CSS</label>
+                </div>
             </div>
         </div>
         <div class="frameworks">
-            <div class="icon">
-                <img src="assets/png-icons/" alt="">
-                <h1 name="icon1">X</h1>
-                <label for="icon1"></label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/" alt="">
-                <h1 name="icon2">X</h1>
-                <label for="icon2"></label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/" alt="">
-                <h1 name="icon3">X</h1>
-                <label for="icon3"></label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/" alt="">
-                <h1 name="icon4">X</h1>
-                <label for="icon4"></label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/" alt="">
-                <h1 name="icon5">X</h1>
-                <label for="icon5"></label>
+            <div class="heading">Frameworks</div>
+            <div class="icons">
+                <div class="icon">
+                    <img src="assets/png-icons/" alt="">
+                    <h1 name="icon1">X</h1>
+                    <label for="icon1"></label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/" alt="">
+                    <h1 name="icon2">X</h1>
+                    <label for="icon2"></label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/" alt="">
+                    <h1 name="icon3">X</h1>
+                    <label for="icon3"></label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/" alt="">
+                    <h1 name="icon4">X</h1>
+                    <label for="icon4"></label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/" alt="">
+                    <h1 name="icon5">X</h1>
+                    <label for="icon5"></label>
+                </div>
             </div>
         </div>
         <div class="tools">
-            <div class="icon">
-                <img src="assets/png-icons/" alt="">
-                <h1 name="icon1">X</h1>
-                <label for="icon1"></label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/" alt="">
-                <h1 name="icon2">X</h1>
-                <label for="icon2"></label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/" alt="">
-                <h1 name="icon3">X</h1>
-                <label for="icon3"></label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/" alt="">
-                <h1 name="icon4">X</h1>
-                <label for="icon4"></label>
-            </div>
-            <div class="icon">
-                <img src="assets/png-icons/" alt="">
-                <h1 name="icon5">X</h1>
-                <label for="icon5"></label>
+            <div class="heading">Others</div>
+            <div class="icons">
+                <div class="icon">
+                    <img src="assets/png-icons/" alt="">
+                    <h1 name="icon1">X</h1>
+                    <label for="icon1"></label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/" alt="">
+                    <h1 name="icon2">X</h1>
+                    <label for="icon2"></label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/" alt="">
+                    <h1 name="icon3">X</h1>
+                    <label for="icon3"></label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/" alt="">
+                    <h1 name="icon4">X</h1>
+                    <label for="icon4"></label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/" alt="">
+                    <h1 name="icon5">X</h1>
+                    <label for="icon5"></label>
+                </div>
             </div>
         </div>
     </div>
