--- a/src/app/page-skills/page-skills.component.scss
+++ b/src/app/page-skills/page-skills.component.scss
@@ -7,43 +7,66 @@
     color: #FFF;
 }
 
+#skill {
+    text-align: center;
+    font-size: 2rem;
+    padding: 2rem;
+}
+
 .skill-container {
     width: 100%;
-}
-.icon{
-    position:relative ;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-.icon>img{
-    width: 40px;
-}
-.icon:hover{
-    transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    transform: scale(1.1);
 }
 
 .languages,
 .tools,
 .frameworks {
+    border: 1px solid black;
+    margin: 2rem auto;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.3), 0 10px 10px rgba(0, 0, 0, 0.25);
+    color: #c0c0c0;
+    // background: transparent;
+    background: none;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(0, 172, 181, 0.25);
+    transition: box-shadow 0.8s;
+    padding: 1rem;
+}
+
+.languages>.icons,
+.tools>.icons,
+.frameworks>.icons {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(4rem, 10rem));
-    justify-content: stretch;
-    align-items: stretch;
+    justify-content: center;
+    align-items: center;
     grid-auto-flow: row;
     padding: 1rem;
     gap: 1rem;
-    border: 1px solid black;
-    margin: 0 auto;
 }
 
-.languages>div,
-.tools>div,
-.frameworks>div {
-    
+.heading {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.icon {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
     padding: 1rem;
+    transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.icon>img {
+    width: 40px;
+}
+
+.icon:hover {
+    transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transform: scale(1.1);
 }
