--- a/src/app/logo-banner/logo-banner.component.scss
+++ b/src/app/logo-banner/logo-banner.component.scss
@@ -2,6 +2,7 @@
 
 
 .logo {
+    z-index: 999;
     font-family: "Raleway";
     font-family: 'Comfortaa', sans-serif;
     writing-mode: vertical-lr;
