--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,29 +8,34 @@
     </svg>
     <div class="sections">
         <section id="section-intro">
+            <div class="quarter-circle-top"></div>
             <page-intro></page-intro>
+            <div class="quarter-circle-bottom"></div>
         </section>
 
         <section id="section-about">
+            <div class="quarter-circle-top"></div>
             <page-about></page-about>
+            <div class="quarter-circle-bottom"></div>
         </section>
 
         <section id="section-skills">
+            <div class="quarter-circle-top"></div>
             <page-skills></page-skills>
+            <div class="quarter-circle-bottom"></div>
         </section>
 
         <section id="section-projects">
+            <div class="quarter-circle-top"></div>
             <page-projects></page-projects>
+            <div class="quarter-circle-bottom"></div>
         </section>
 
         <section id="section-contact">
+            <div class="quarter-circle-top"></div>
             <page-contact></page-contact>
+            <div class="quarter-circle-bottom"></div>
         </section>
 
     </div>
-    <svg class="svg-bottom" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#00ADB5" fill-opacity="1"
-            d="M0,256L48,261.3C96,267,192,277,288,250.7C384,224,480,160,576,133.3C672,107,768,117,864,117.3C960,117,1056,107,1152,85.3C1248,64,1344,32,1392,16L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-        </path>
-    </svg>
 </div>
