--- a/src/app/page-about/page-about.component.scss
+++ b/src/app/page-about/page-about.component.scss
@@ -2,9 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap');
 
 .main {
+    margin: 0 auto;
     height: 100vh;
+    width: 70%;
     display: flex;
-    // align-items: center;
+    align-items: center;
     justify-content: center;
     color: #FFF;
 }
