--- a/src/app/page-skills/page-skills.component.scss
+++ b/src/app/page-skills/page-skills.component.scss
@@ -1,4 +1,5 @@
 .main {
+    margin: 0 auto;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -14,7 +15,7 @@
 }
 
 .skill-container {
-    width: 100%;
+    width: 70%;
 }
 
 .languages,
