added project and contact section

--- a/src/app/page-about/page-about.component.html
+++ b/src/app/page-about/page-about.component.html
@@ -28,7 +28,7 @@
                             <path d="M22 9l-10 -4l-10 4l10 4l10 -4v6" />
                             <path d="M6 10.6v5.4a6 3 0 0 0 12 0v-5.4" />
                         </svg><br><span>Education</span></label></li>
-                <li title="Objective"><label for="tab3" role="button"><svg xmlns="http://www.w3.org/2000/svg"
+                <li title="Experience"><label for="tab3" role="button"><svg xmlns="http://www.w3.org/2000/svg"
                             class="icon icon-tabler icon-tabler-target-arrow" width="24" height="24" viewBox="0 0 24 24"
                             stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
                             stroke-linejoin="round">
@@ -38,7 +38,7 @@
                             <path d="M13 3.055a9 9 0 1 0 7.941 7.945" />
                             <path d="M15 6v3h3l3 -3h-3v-3z" />
                             <path d="M15 9l-3 3" />
-                        </svg><br><span>Objective</span></label></li>
+                        </svg><br><span>Experience</span></label></li>
                 <li title="Location"><label for="tab4" role="button"><svg xmlns="http://www.w3.org/2000/svg"
                             class="icon icon-tabler icon-tabler-map-pin" width="24" height="24" viewBox="0 0 24 24"
                             stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
@@ -56,30 +56,47 @@
             </div>
             <div class="content">
                 <section>
-                    <h2>Myself</h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea dolorem sequi, quo
-                    tempore
-                    in eum obcaecati atque quibusdam officiis est dolorum minima deleniti ratione molestias numquam.
-                    Voluptas voluptates quibusdam cum?
+                    <h2>Myself</h2>
+                    <div class="desc">Hi, <br>I'm Sandip Gupta, a 23-year-old enthusiastic software/web developer specializing in Full
+                        Stack
+                        Developement.
+                        <br>Crafting seamless digital experiences is my forte, where coding is an art of
+                        innovation. With a knack for problem-solving and adaptability, I bring a dynamic edge to every
+                        project. Let's redefine the future of technology together.</div>
                 </section>
                 <section>
                     <h2>Education</h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem quas adipisci a accusantium eius ut
-                    voluptatibus ad impedit nulla, ipsa qui. Quasi temporibus eos commodi aliquid impedit amet,
-                    similique
-                    nulla.
+                    <div class="desc">
+                        <div class="ed">
+                            <h3>Computer Engineering</h3> <em>8.7 CGPA ( Mumbai University 2019-23 )</em>
+                        </div>
+                        <div class="ed">
+                            <h3>Higher Secondary School</h3> <em>75.4% ( State Board 2016-18 )</em>
+                        </div>
+                        <div class="ed">
+                            <h3>Secondary School</h3> <em>80.6% ( State Board 2016 )</em>
+                        </div>
+                    </div>
+
                 </section>
                 <section>
-                    <h2>Objective</h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dicta vero rerum? Eaque repudiandae
-                    architecto libero reprehenderit aliquam magnam ratione quidem? Nobis doloribus molestiae enim
-                    deserunt
-                    necessitatibus eaque quidem incidunt.
+                    <h2>Experience</h2>
+                    <div class="desc">
+                        <div class="ex">
+                            <h3>Zycus Infotech Pvt. Ltd.</h3>
+                            <em>Software Engineer</em><br>
+                            <em>Oct 2023 - Present</em>
+                        </div>
+                    </div>
                 </section>
                 <section>
                     <h2>Location</h2>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nemo ducimus eius, magnam error
-                    quisquam
-                    sunt voluptate labore, excepturi numquam! Alias libero optio sed harum debitis! Veniam, quia in eum.
+                    <div class="desc">
+                        <div class="ad">
+                            <h3>Current Address</h3>
+                            <em>Mumbra, Dist. Thane, India - 400612</em><br>
+                        </div>
+                    </div>
                 </section>
 
             </div>
