--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -1,4 +1,19 @@
 <div class="main">
-    <p>page-contact works!</p>
-    <h1>This is Contact</h1>
+    <h1>Contact</h1>
+    <div class="container">
+        <div class="hello-box">
+            <h3>Interesting? let's have conversation. Get in touch and say Hello</h3>
+            <div class="hello-btn">
+                <a href="mailto:your.email@example.com" target="_blank">
+                    <button type="button" href="mailto:s02295@gmail.com" ><h3>Say hello!</h3></button>
+                </a>
+            </div>
+        </div>
+        <div class="social">
+            <div class="icon GitHub">X</div>
+            <div class="icon LinkedIn">X</div>
+            <div class="icon HackerRank">X</div>
+        </div>
+    </div>
+
 </div>
