--- a/src/app/page-skills/page-skills.component.html
+++ b/src/app/page-skills/page-skills.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <h1 id="skill">SKILLS</h1>
+    <h1 id="skill">Skills</h1>
     <div class="skill-container">
         <div class="languages">
             <div class="heading">Languages</div>
