--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,51 +15,22 @@ $color4: #EEEEEE;
 }
 
 
-section:nth-child(even) {
-    position: relative;
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     .quarter-circle-top {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 60vw;
-        height: 5px;
+        width: 75vw;
+        height: 3px;
         background-color: #00acb5;
-        border-radius: 0 0 100% 0;
-
+        border-radius: 0% 100% 50% 50% / 0% 0% 100% 100%  ;
     }
 
     .quarter-circle-bottom {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        width: 60vw;
-        height: 5px;
+        width: 75vw;
+        height: 3px;
         background-color: #00ADB5;
-        border-radius: 100% 0 0 0 ; 
-    }
-}
-
-section:nth-child(odd) {
-    position: relative;
-    .quarter-circle-top {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 60vw;
-        height: 5px;
-        background-color: #00ADB5;
-        border-radius: 0 0 0 100%;
-
-    }
-
-    .quarter-circle-bottom {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 60vw;
-        height: 5px;
-        background-color: #00ADB5;
-        border-radius: 0 100% 0 0;
+        border-radius: 50% 50% 100% 0% / 100% 100% 0% 0% ;
     }
 }
 
