--- a/src/app/float-navbar/float-navbar.component.scss
+++ b/src/app/float-navbar/float-navbar.component.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap');
 
 .float-container {
-    margin: 0 auto;
-    padding: 3rem;
+    margin: 3rem auto;
+    // padding: 3rem;
     text-align: center;
     position: fixed;
     width: 100%;
@@ -12,7 +12,7 @@
 }
 
 .float-container.scrolled {
-    transform: translateY(calc(-100vh + 100%));
+    transform: translateY(calc(-100vh + 100% + 5rem));
     transition: transform 0.8s cubic-bezier(0.61, 0.07, 0.16, 0.81);
 }
 
