--- a/src/app/page-intro/page-intro.component.scss
+++ b/src/app/page-intro/page-intro.component.scss
@@ -5,16 +5,17 @@
 .main {
     margin: 0 auto;
     font-family: 'Raleway';
-    height: 100vh;
+    height: calc(100vh - 6px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #eeeeee;
+    width: 100%;
 }
 
 .intro {
-    width: fit-content;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
