--- a/src/app/page-projects/page-projects.component.scss
+++ b/src/app/page-projects/page-projects.component.scss
@@ -1,7 +1,95 @@
-.main{
-    height: 100vh;
+@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:300,400';
+.main {
+    height: calc(100vh - 6px);
+    // width: 70%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #FFF;
+}
+
+h1 {
+    font-family: "Raleway";
+    color: #00ADB5;
+    text-align: center;
+    font-weight: 800;
+    padding: 0 0 3rem 0;
+    text-shadow: 2px 2px 2px #072230,
+        2px 4px 3px #00090ea4;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.project {
+    width: 18vw;
+    height: 50vh;
+    margin: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.3), 0 10px 10px rgba(0, 0, 0, 0.25);
+    color: #c0c0c0;
+    background: none;
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(0, 172, 181, 0.25);
+    transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    // padding: 1rem;
+}
+.img{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+}
+
+.overlay {
+    background-color: rgba(7, 34, 48, 0.3);
+    transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+a {
+    font-family: "Raleway";
+    padding: 1rem;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: start;
+    transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    .name{
+        padding: 0.5rem 0;
+        font-size: 2rem;
+    }
+    .desc{
+        font-size: 1.5rem;
+    }
+
+}
+.project:hover{
+    color: #00ADB5;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.4), 0 15px 15px rgba(0, 0, 0, 0.3);
+    transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transform: translateY(-5px);
+    .profile{
+        .img{
+            .overlay{
+                background-color: rgba(7, 34, 48, 0);
+                transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            }
+        }
+    }
 }
