--- a/src/app/page-skills/page-skills.component.scss
+++ b/src/app/page-skills/page-skills.component.scss
@@ -1,6 +1,7 @@
 .main {
+    // width: 70%;
     margin: 0 auto;
-    height: 100vh;
+    height: calc(100vh - 6px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,24 +10,28 @@
 }
 
 #skill {
+    font-family: "Raleway";
+    color: #00ADB5;
     text-align: center;
-    font-size: 2rem;
-    padding: 2rem;
+    font-weight: 800;
+    padding: 0 0 3rem 0;
+    text-shadow: 2px 2px 2px #072230,
+        2px 4px 3px #00090ea4;
 }
 
 .skill-container {
-    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .languages,
 .tools,
 .frameworks {
-    border: 1px solid black;
-    margin: 2rem auto;
+    margin: 1rem auto;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.3), 0 10px 10px rgba(0, 0, 0, 0.25);
     color: #c0c0c0;
-    // background: transparent;
     background: none;
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
@@ -38,8 +43,7 @@
 .languages>.icons,
 .tools>.icons,
 .frameworks>.icons {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(4rem, 10rem));
+    display: flex;
     justify-content: center;
     align-items: center;
     grid-auto-flow: row;
